--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -26,6 +26,7 @@ labels: {}
 podLabels: {}
 nodeSelector: {}
 tolerations: []
+affinity: {}
 
 # Dremio Coordinator
 coordinator:
@@ -78,6 +79,16 @@ coordinator:
   #podLabels: {}
   #nodeSelector: {}
   #tolerations: []
+  affinity:
+    podAntiAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: "app"
+                operator: In
+                values:
+                - dremio-coordinator
+          topologyKey: "kubernetes.io/hostname"
 
   # Web UI
   web:
@@ -180,7 +191,7 @@ executor:
     volumes:
     - size: 100Gi
 
-  # These values, when defined and not empty, override the provided shared annotations, labels, node selectors, or tolerations.
+  # These values, when defined and not empty, override the provided shared annotations, labels, node selectors, tolerations, or affinity.
   # Uncomment only if you are trying to override the chart's shared values.
   #annotations: {}
   #podAnnotations: {}
@@ -188,6 +199,7 @@ executor:
   #podLabels: {}
   #nodeSelector: {}
   #tolerations: []
+  #affinity: {}
 
   # Engine Overrides
   #
@@ -216,6 +228,7 @@ executor:
   #     podLabels: {}
   #     nodeSelector: {}
   #     tolerations: []
+  #     affinity: {}
   #
   #     serviceAccount: ""
   #
@@ -275,6 +288,16 @@ zookeeper:
   #podLabels: {}
   #nodeSelector: {}
   #tolerations: []
+  affinity:
+    podAntiAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: "app"
+                operator: In
+                values:
+                - zk
+          topologyKey: "kubernetes.io/hostname"
 
 # Control where uploaded files are stored for Dremio.
 # For more information, see https://docs.dremio.com/deployment/distributed-storage.html
