--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -30,6 +30,7 @@ spec:
       terminationGracePeriodSeconds: 120
       {{- include "dremio.executor.nodeSelector" (list $ $engineName) | nindent 6}}
       {{- include "dremio.executor.tolerations" (list $ $engineName) | nindent 6}}
+      {{- include "dremio.executor.affinity" (list $ $engineName) | nindent 6}}
       containers:
       - name: dremio-executor
         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
