--- a/charts/dremio_v2/templates/dremio-executor.yaml
+++ b/charts/dremio_v2/templates/dremio-executor.yaml
@@ -54,6 +54,12 @@ spec:
         {{- include "dremio.executor.cloudCache.volumeMounts" (list $ $engineName) | nindent 8 }}
         {{- include "dremio.executor.extraVolumeMounts" (list $ $engineName) | nindent 8 }}
         env:
+        {{- if and $.Values.telemetry.enabled (eq $.Values.telemetry.type "jmx") }}
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
+        {{- end }}
         - name: DREMIO_MAX_HEAP_MEMORY_SIZE_MB
           value: "{{ template "dremio.executor.heapMemory" (list $ $engineName) }}"
         - name: DREMIO_MAX_DIRECT_MEMORY_SIZE_MB
@@ -68,6 +74,15 @@ spec:
             -Dservices.executor.enabled=true
             -Dservices.conduit.port=45679
             -Dservices.node-tag={{ $engineName }}
+            {{- if and $.Values.telemetry.enabled (eq $.Values.telemetry.type "jmx") }}
+            -Dcom.sun.management.jmxremote
+            -Dcom.sun.management.jmxremote.authenticate=false
+            -Dcom.sun.management.jmxremote.ssl=false
+            -Dcom.sun.management.jmxremote.local.only=false
+            -Dcom.sun.management.jmxremote.port={{ $.Values.telemetry.jmxPort }}
+            -Dcom.sun.management.jmxremote.rmi.port={{ $.Values.telemetry.jmxPort }}
+            -Djava.rmi.server.hostname=$(POD_IP)
+            {{- end }}
         - name: AWS_CREDENTIAL_PROFILES_FILE
           value: "/opt/dremio/aws/credentials"
         - name: AWS_SHARED_CREDENTIALS_FILE
@@ -79,6 +94,10 @@ spec:
           name: server-fabric
         - containerPort: 45679
           name: server-conduit
+        {{- if and $.Values.telemetry.enabled (eq $.Values.telemetry.type "jmx") }}
+        - containerPort: {{ $.Values.telemetry.jmxPort }}
+          name: jmx-port
+        {{- end }}
       initContainers:
       {{- include "dremio.executor.extraInitContainers" (list $ $engineName) | nindent 6 }}
       - name: chown-data-directory
