Add ability to specify global image registry in values

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -29,7 +29,7 @@ spec:
       {{- include "dremio.coordinator.tolerations" $ | nindent 6 }}
       containers:
       - name: dremio-coordinator
-        image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+        image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
         resources:
           requests:
@@ -96,7 +96,7 @@ spec:
         command:  ["sh", "-c", "until nc -z dremio-client {{ $.Values.coordinator.web.port }} > /dev/null; do echo Waiting for Dremio master.; sleep 2; done;"]
       {{- if $.Values.coordinator.web.tls.enabled }}
       - name: generate-ui-keystore
-        image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+        image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: dremio-tls
@@ -108,7 +108,7 @@ spec:
       {{- end }}
       {{- if $.Values.coordinator.client.tls.enabled }}
       - name: generate-client-keystore
-        image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+        image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: dremio-tls
@@ -120,7 +120,7 @@ spec:
       {{- end }}
       {{- if $.Values.coordinator.flight.tls.enabled }}
       - name: generate-flight-keystore
-        image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+        image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: dremio-tls
