--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -16,6 +16,12 @@
 image: dremio/dremio-oss
 imageTag: latest
 
+# Global image registry
+# make sure to add slash in the end of URL
+# Example: your_private_global_registry:8080/
+global:
+ imageRegistry: ""
+
 # Annotations, labels, node selectors, and tolerations
 #
 # annotations: Annotations are applied to the StatefulSets that are deployed.
@@ -62,7 +68,7 @@ coordinator:
   # Uncomment the below lines to use a custom set of extra init containers for the coordinator.
   #extraInitContainers: |
   #  - name: extra-init-container
-  #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+  #    image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
   #    command: ["echo", "Hello World"]
 
   # Extra Volumes
@@ -152,7 +158,7 @@ executor:
   # Uncomment the below lines to use a custom set of extra init containers for executors.
   #extraInitContainers: |
   #  - name: extra-init-container
-  #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+  #    image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
   #    command: ["echo", "Hello World"]
 
   # Extra Volumes
@@ -230,7 +236,7 @@ executor:
   #
   #     extraInitContainers: |
   #       - name: extra-init-container
-  #         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+  #         image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
   #         command: ["echo", "Hello World"]
   #
   #
@@ -425,7 +431,7 @@ distStorage:
 # Uncomment the below lines to provide extra init containers to be run first.
 #extraInitContainers: |
 #  - name: extra-init-container
-#    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+#    image: {{ $.Values.global.imageRegistry }}{{ $.Values.image }}:{{ $.Values.imageTag }}
 #    command: ["echo", "Hello World"]
 
 # Kubernetes Service Account
