--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -2,13 +2,19 @@
 #
 # It is *highly* recommended to update the version tag to
 # the version that you are using. This will ensure that all
-# the pods are using the same version of the software.
+# the pods are using the same version of the software. If
+# you are directly consuming Dremio's images from Docker Hub,
+# when specifying which version to use, it is best to use the
+# full version tag in the form X.Y.Z (i.e. 21.1.0), as image
+# tags in the form X.Y (i.e. 21.1) are updated with the latest
+# patch version released.
 #
-# Using latest will cause Dremio to potentially upgrade versions
+# Using the image tag latest or in the form X.Y
+# will potentially cause Dremio to upgrade versions
 # automatically during redeployments and may negatively impact
 # the cluster.
-image: ericnee/dremio-oss
-imageTag: v20.1.0
+image: dremio/dremio-oss
+imageTag: latest
 
 # Annotations, labels, node selectors, and tolerations
 #
@@ -32,8 +38,8 @@ coordinator:
   # CPU & Memory
   # Memory allocated to each coordinator, expressed in MB.
   # CPU allocated to each coordinator, expressed in CPU cores.
-  cpu: 4
-  memory: 4096
+  cpu: 15
+  memory: 122800
 
   # This count is used for slave coordinators only.
   # The total number of coordinators will always be count + 1.
@@ -61,17 +67,11 @@ coordinator:
 
   # Extra Volumes
   # Uncomment below to use a custom set of extra volumes for the coordinator.
-  extraVolumes: 
-    - name: timezone
-      hostPath: 
-        path: /usr/share/zoneinfo/Asia/Shanghai
-      
+  #extraVolumes: []
 
   # Extra Volume Mounts
   # Uncomment below to use a custom set of extra volume mounts for the coordinator.
-  extraVolumeMounts: 
-    - name: timezone
-      mountPath: /etc/localtime
+  #extraVolumeMounts: []
 
   # Uncomment this value to use a different storage class for the coordinator.
   #storageClass:
@@ -128,14 +128,14 @@ executor:
   # CPU & Memory
   # Memory allocated to each executor, expressed in MB.
   # CPU allocated to each executor, expressed in CPU cores.
-  cpu: 4
-  memory: 16384
+  cpu: 15
+  memory: 122800
 
   # Engines
   # Engine names be 47 characters or less and be lowercase alphanumber characters or '-'.
   # Note: The number of executor pods will be the length of the array below * count.
   engines: ["default"]
-  count: 2
+  count: 3
 
   # Executor volume size.
   volumeSize: 128Gi
@@ -157,19 +157,14 @@ executor:
 
   # Extra Volumes
   # Uncomment below to use a custom set of extra volumes for executors.
-  extraVolumes: 
-    - name: timezone
-      hostPath: 
-        path: /usr/share/zoneinfo/Asia/Shanghai
+  #extraVolumes: []
 
   # Extra Volume Mounts
   # Uncomment below to use a custom set of extra volume mounts for executors.
-  extraVolumeMounts: 
-    - name: timezone
-      mountPath: /etc/localtime
+  #extraVolumeMounts: []
 
   # Uncomment this value to use a different storage class for executors.
-  storageClass: nfs
+  #storageClass:
 
   # Dremio C3
   # Designed for use with NVMe storage devices, performance may be impacted when using
@@ -259,15 +254,15 @@ executor:
 # Zookeeper
 zookeeper:
   # The Zookeeper image used in the cluster.
-  image: k8s.gcr.io/kubernetes-zookeeper
-  imageTag: 1.0-3.4.10
+  image: zookeeper
+  imageTag: 3.8.0
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
   # CPU allocated to each zookeeper, expressed in CPU cores.
   cpu: 0.5
   memory: 1024
-  count: 1
+  count: 3
 
   volumeSize: 10Gi
 
@@ -290,9 +285,9 @@ zookeeper:
 # Control where uploaded files are stored for Dremio.
 # For more information, see https://docs.dremio.com/deployment/distributed-storage.html
 distStorage:
-  # The supported distributed storage types are: local, aws, azure, gcp, or azureStorage.
+  # The supported distributed storage types are: local (<21.0.0 only), aws, azure, gcp, or azureStorage.
   #
-  # local: Not recommended for production use. When using local, dist-caching is disabled.
+  # local: (<21.0.0 only) Not recommended for production use. When using local, dist-caching is disabled.
   # aws: AWS S3, additional parameters required, see "aws" section.
   # azure: ADLS Gen 1, additional parameters required, see "azure" section.
   # azureStorage: Azure Storage Gen2, additional paramters required, see "azureStorage" section.
@@ -439,15 +434,12 @@ distStorage:
 
 # Extra Volumes
 # Array to add extra volumes to all Dremio resources.
-extraVolumes: 
-    - name: timezone
-      hostPath: 
-        path: /usr/share/zoneinfo/Asia/Shanghai
+extraVolumes: []
+
 # Extra Volume Mounts
 # Array to add extra volume mounts to all Dremio resources, normally used in conjunction wtih extraVolumes.
-extraVolumeMounts: 
-    - name: timezone
-      mountPath: /etc/localtime
+extraVolumeMounts: []
+
 # Dremio Service
 # The dremio-client service exposes the service for access outside of the Kubernetes cluster.
 service:
