--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -14,7 +14,7 @@
 # automatically during redeployments and may negatively impact
 # the cluster.
 image: dremio/dremio-oss
-imageTag: latest
+imageTag: 22.0.0
 
 # Annotations, labels, node selectors, and tolerations
 #
@@ -38,8 +38,8 @@ coordinator:
   # CPU & Memory
   # Memory allocated to each coordinator, expressed in MB.
   # CPU allocated to each coordinator, expressed in CPU cores.
-  cpu: 15
-  memory: 122800
+  cpu: 4
+  memory: 4096
 
   # This count is used for slave coordinators only.
   # The total number of coordinators will always be count + 1.
@@ -67,11 +67,17 @@ coordinator:
 
   # Extra Volumes
   # Uncomment below to use a custom set of extra volumes for the coordinator.
-  #extraVolumes: []
+  extraVolumes: 
+    - name: timezone
+      hostPath: 
+        path: /usr/share/zoneinfo/Asia/Shanghai
+      
 
   # Extra Volume Mounts
   # Uncomment below to use a custom set of extra volume mounts for the coordinator.
-  #extraVolumeMounts: []
+  extraVolumeMounts: 
+    - name: timezone
+      mountPath: /etc/localtime
 
   # Uncomment this value to use a different storage class for the coordinator.
   #storageClass:
@@ -128,14 +134,14 @@ executor:
   # CPU & Memory
   # Memory allocated to each executor, expressed in MB.
   # CPU allocated to each executor, expressed in CPU cores.
-  cpu: 15
-  memory: 122800
+  cpu: 4
+  memory: 16384
 
   # Engines
   # Engine names be 47 characters or less and be lowercase alphanumber characters or '-'.
   # Note: The number of executor pods will be the length of the array below * count.
   engines: ["default"]
-  count: 3
+  count: 2
 
   # Executor volume size.
   volumeSize: 128Gi
@@ -157,14 +163,19 @@ executor:
 
   # Extra Volumes
   # Uncomment below to use a custom set of extra volumes for executors.
-  #extraVolumes: []
+  extraVolumes: 
+    - name: timezone
+      hostPath: 
+        path: /usr/share/zoneinfo/Asia/Shanghai
 
   # Extra Volume Mounts
   # Uncomment below to use a custom set of extra volume mounts for executors.
-  #extraVolumeMounts: []
+  extraVolumeMounts: 
+    - name: timezone
+      mountPath: /etc/localtime
 
   # Uncomment this value to use a different storage class for executors.
-  #storageClass:
+  storageClass: nfs
 
   # Dremio C3
   # Designed for use with NVMe storage devices, performance may be impacted when using
@@ -254,15 +265,15 @@ executor:
 # Zookeeper
 zookeeper:
   # The Zookeeper image used in the cluster.
-  image: zookeeper
-  imageTag: 3.8.0
+  image: k8s.gcr.io/kubernetes-zookeeper
+  imageTag: 1.0-3.4.10
 
   # CPU & Memory
   # Memory allocated to each zookeeper, expressed in MB.
   # CPU allocated to each zookeeper, expressed in CPU cores.
   cpu: 0.5
   memory: 1024
-  count: 3
+  count: 1
 
   volumeSize: 10Gi
 
@@ -434,12 +445,15 @@ distStorage:
 
 # Extra Volumes
 # Array to add extra volumes to all Dremio resources.
-extraVolumes: []
-
+extraVolumes: 
+    - name: timezone
+      hostPath: 
+        path: /usr/share/zoneinfo/Asia/Shanghai
 # Extra Volume Mounts
 # Array to add extra volume mounts to all Dremio resources, normally used in conjunction wtih extraVolumes.
-extraVolumeMounts: []
-
+extraVolumeMounts: 
+    - name: timezone
+      mountPath: /etc/localtime
 # Dremio Service
 # The dremio-client service exposes the service for access outside of the Kubernetes cluster.
 service:
