added -Dsaffron.default.charset=UTF-16LE -Dsaffron.default.nationalcharset=UTF-16LE -Dsaffron.default.collat​​ion.name=UTF-16LE\$en_US into values.yaml

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -49,8 +49,10 @@ coordinator:
   #serviceAccount: ""
 
   # Uncomment the lines below to use a custom set of extra startup parameters for the coordinator.
-  #extraStartParams: >-
-  #  -DsomeKey=someValue
+  extraStartParams: >-
+    -Dsaffron.default.charset=UTF-16LE
+    -Dsaffron.default.nationalcharset=UTF-16LE
+    -Dsaffron.default.collat​​ion.name=UTF-16LE\$en_US
 
   # Extra Init Containers
   # Uncomment the below lines to use a custom set of extra init containers for the coordinator.
@@ -145,8 +147,10 @@ executor:
   #serviceAccount: ""
 
   # Uncomment the lines below to use a custom set of extra startup parameters for executors.
-  #extraStartParams: >-
-  #  -DsomeKey=someValue
+  extraStartParams: >-
+    -Dsaffron.default.charset=UTF-16LE
+    -Dsaffron.default.nationalcharset=UTF-16LE
+    -Dsaffron.default.collat​​ion.name=UTF-16LE\$en_US
 
   # Extra Init Containers
   # Uncomment the below lines to use a custom set of extra init containers for executors.
