Revert "updated to latest official version."
This reverts commit f75fb60b154e3cdd65a3fa236e9a09ee91f35100.

# Conflicts:
#	charts/dremio_v2/values.yaml

--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -13,8 +13,9 @@
 # will potentially cause Dremio to upgrade versions
 # automatically during redeployments and may negatively impact
 # the cluster.
-image: dremio/dremio-oss
-imageTag: 22.0.0
+
+image: ericnee/dremio-oss
+imageTag: v20.1.0
 
 # Annotations, labels, node selectors, and tolerations
 #
