--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -65,6 +65,13 @@ coordinator:
   #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
   #    command: ["echo", "Hello World"]
 
+  # Extra Containers
+  # Uncomment the below lines to use a custom set of extra containers for the coordinator.
+  #extraContainers: |
+  #  - name: extra-container
+  #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+  #    command: ["echo", "Hello World"]
+
   # Extra Volumes
   # Uncomment below to use a custom set of extra volumes for the coordinator.
   #extraVolumes: []
@@ -155,6 +162,13 @@ executor:
   #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
   #    command: ["echo", "Hello World"]
 
+  # Extra Containers
+  # Uncomment the below lines to use a custom set of extra containers for the executors.
+  #extraContainers: |
+  #  - name: extra-container
+  #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+  #    command: ["echo", "Hello World"]
+
   # Extra Volumes
   # Uncomment below to use a custom set of extra volumes for executors.
   #extraVolumes: []
@@ -230,6 +244,11 @@ executor:
   #
   #     extraInitContainers: |
   #       - name: extra-init-container
+  #         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+  #         command: ["echo", "Hello World"]
+  #
+  #     extraContainers: |
+  #       - name: extra-container
   #         image: {{ $.Values.image }}:{{ $.Values.imageTag }}
   #         command: ["echo", "Hello World"]
   #
@@ -425,6 +444,13 @@ distStorage:
 # Uncomment the below lines to provide extra init containers to be run first.
 #extraInitContainers: |
 #  - name: extra-init-container
+#    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
+#    command: ["echo", "Hello World"]
+
+# Extra Containers
+# Uncomment the below lines to provide extra containers ("sidecars").
+#extraContainers: |
+#  - name: extra-container
 #    image: {{ $.Values.image }}:{{ $.Values.imageTag }}
 #    command: ["echo", "Hello World"]
 
