updated version to 22.1.1

--- a/charts/dremio_v2_for_test_env/values.yaml
+++ b/charts/dremio_v2_for_test_env/values.yaml
@@ -15,7 +15,7 @@
 # the cluster.
 
 image: ericnee/dremio-oss
-imageTag: v20.1.0
+imageTag: 22.1.1
 
 # Annotations, labels, node selectors, and tolerations
 #
