--- a/charts/dremio_v2_for_test_env/values.yaml
+++ b/charts/dremio_v2_for_test_env/values.yaml
@@ -14,7 +14,7 @@
 # automatically during redeployments and may negatively impact
 # the cluster.
 
-image: ericnee/dremio-oss
+image: dremio/dremio-oss
 imageTag: 22.1.1
 
 # Annotations, labels, node selectors, and tolerations
