--- a/charts/dremio_v2/templates/zookeeper.yaml
+++ b/charts/dremio_v2/templates/zookeeper.yaml
@@ -113,6 +113,9 @@ spec:
           requests:
             cpu: {{ $.Values.zookeeper.cpu }}
             memory: {{ $.Values.zookeeper.memory }}M
+          limits:
+            cpu: {{ $.Values.zookeeper.cpu }}
+            memory: {{ $.Values.zookeeper.memory }}M
         ports:
         - containerPort: 2181
           name: client
