DX-51964: Attaching a kubernetes service account to dremio-admin
Change-Id: I6271b125fcd3d238b1c8f42b57d6a32f959e4a87

--- a/charts/dremio_v2/templates/dremio-admin.yaml
+++ b/charts/dremio_v2/templates/dremio-admin.yaml
@@ -12,6 +12,7 @@ metadata:
   {{- include "dremio.admin.podAnnotations" $ | nindent 2}}
   {{- include "dremio.admin.podLabels" $ | nindent 2}}
 spec:
+  {{- include "dremio.admin.serviceAccount" $ | nindent 2 }}
   containers:
   - name: dremio-admin
     image: {{ $.Values.image }}:{{ $.Values.imageTag }}
@@ -21,7 +22,7 @@ spec:
     resources:
       requests:
         cpu: {{ $.Values.coordinator.cpu }}
-        memory: {{ $.Values.coordinator.memory }}M
+        memory: {{ $.Values.coordinator.memory }}
     volumeMounts:
     - name: dremio-master-volume
       mountPath: /opt/dremio/data
