--- a/charts/dremio_v2/templates/dremio-admin.yaml
+++ b/charts/dremio_v2/templates/dremio-admin.yaml
@@ -12,7 +12,7 @@ metadata:
   {{- include "dremio.admin.podAnnotations" $ | nindent 2}}
   {{- include "dremio.admin.podLabels" $ | nindent 2}}
 spec:
-  {{- include "dremio.coordinator.serviceAccount" $ | nindent 2 }}
+  {{- include "dremio.admin.serviceAccount" $ | nindent 2 }}
   containers:
   - name: dremio-admin
     image: {{ $.Values.image }}:{{ $.Values.imageTag }}
