Telemetry service endpoint and service monitor

--- a/charts/dremio_v2/templates/dremio-coordinator.yaml
+++ b/charts/dremio_v2/templates/dremio-coordinator.yaml
@@ -80,6 +80,8 @@ spec:
           name: server-fabric
         - containerPort: 45679
           name: server-conduit
+        - containerPort: 12543
+          name: telemetry
         readinessProbe:
           httpGet:
             path: /
