DX-59439: Fix memory units on container requests from M to Mi
Change-Id: I8439aa69d9a287cad6c98bd8ecde8597d658ec39

--- a/charts/dremio_v2/templates/zookeeper.yaml
+++ b/charts/dremio_v2/templates/zookeeper.yaml
@@ -112,7 +112,7 @@ spec:
         resources:
           requests:
             cpu: {{ $.Values.zookeeper.cpu }}
-            memory: {{ $.Values.zookeeper.memory }}M
+            memory: {{ $.Values.zookeeper.memory }}Mi
         ports:
         - containerPort: 2181
           name: client
