--- a/charts/dremio_v2/values.yaml
+++ b/charts/dremio_v2/values.yaml
@@ -33,6 +33,10 @@ podLabels: {}
 nodeSelector: {}
 tolerations: []
 
+# Secrets
+# Enable these values if you require Kubernetes Secrets as a part of your setup
+# secrets: {}
+
 # Dremio Coordinator
 coordinator:
   # CPU & Memory
@@ -475,3 +479,15 @@ service:
 # https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
 # imagePullSecrets:
 #  - secretname
+
+# To use a Horizontal Pod Autoscaler (HPA), uncomment the below.
+# A HPA will be needed to enable auto scaling of dremio-executors
+# hpa: {}
+
+# If you are wanting to enable auto scaling via Prometheus, a PodMonitor
+# will be require to expose metrics from the Dremio Statefulsets to Prometheus
+# podMonitor: {}
+
+# If you require additional configurations, enable this option. 
+# These will be deployed as a ConfigMap name 'dremio-additional-configs'
+# additionalConfigMap: {}
