DX-24067: Adding ability to auto scale executors with Prometheus
Change-Id: I862b6a37f95f3763ed17a7de885f0b5477814f34

--- a/charts/dremio_v2/templates/dremio-configmap.yaml
+++ b/charts/dremio_v2/templates/dremio-configmap.yaml
@@ -19,6 +19,15 @@ metadata:
 data:
   {{- tpl ($.Files.Glob "config/hive3/*").AsConfig . | nindent 2 }}
 ---
+{{- if $.Values.additionalConfigMap }}
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: dremio-addtional-configs
+data:
+  {{- toYaml $.Values.additionalConfigMap | nindent 2 }}
+{{- end }}
+---
 {{- $originalValues := mustDeepCopy $.Values -}}
 {{- range $engine := keys (default (dict) $.Values.executor.engineOverride) -}}
 {{- if has $engine $.Values.executor.engines -}}
