DX-58905: Adding ability to scale Dremio executors based on Prometheus metrics > - new templates: pod-monitor and hpa - changes to dremio-executor and dremio-coordinator to expose metrics to Prometheus - new values in values.yaml to add annotations and port for Prometheus
Change-Id: I9e6bf0f7351fba91a88e303f7d6e777b1f92b685

--- a/charts/dremio_v2/templates/pod-monitor.yaml
+++ b/charts/dremio_v2/templates/pod-monitor.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      role: {{ $.Values.podMonitor.matchLabels.role }}
+      role: dremio-cluster-pod
   podMetricsEndpoints:
     {{- toYaml $.Values.podMonitor.podMetricsEndpoints | nindent 4 }}
 {{- end -}}
