--- a/utils/Dockerfile
+++ b/utils/Dockerfile
@@ -1,38 +1,7 @@
-################################################################
-# Image with useful cloud tools installed:
-#   - aws cli
-#   - eksctl
-#   - azure cli
-#   - gcloud
-#   - kubectl
-#   - helm
-#   - git
-#
-# An image built with this is published in Dockerhub as
-# dremio/cloud-tools
-#
-################################################################
-FROM centos
+FROM gcr.io/dremio-1093/dremio-ee:24.0.0-202212051906450478-3a6c373f
 
-ADD helm-init.sh /usr/local/bin
+USER root
+ADD autoscale-handler.sh /opt/dremio/bin/autoscale-handler.sh
 
-RUN \
-  yum install -y epel-release && \
-  yum install -y which openssl git python-pip && \
-  pip install --upgrade pip && \
-  pip install awscli && \
-  curl --silent --location "https://github.com/weaveworks/eksctl/releases/download/latest_release/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp && \
-  mv /tmp/eksctl /usr/local/bin && \
-  curl -s -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.13.7/2019-06-11/bin/linux/amd64/aws-iam-authenticator && \
-  chmod +x ./aws-iam-authenticator && \
-  mv aws-iam-authenticator /usr/local/bin && \
-  curl -s -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl && \
-  chmod +x kubectl && \
-  mv kubectl /usr/local/bin && \
-  curl -s -L https://git.io/get_helm.sh | bash && \
-  rpm --import https://packages.microsoft.com/keys/microsoft.asc && \
-  sh -c 'echo -e "[azure-cli]\nname=Azure CLI\nbaseurl=https://packages.microsoft.com/yumrepos/azure-cli\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/azure-cli.repo' && \
-  yum install -y azure-cli && \
-  curl https://sdk.cloud.google.com | bash
+ENTRYPOINT ["tail", "-f", "/dev/null"]
 
-WORKDIR /root
